syntax = "proto3";

package net.devh.boot.grpc.example;
option java_multiple_files = true;
option java_outer_classname = "BookingProto";
option java_package = "com.microservice.booking_proto";

service BookingService {
  rpc createCinema(CreateCinemaRequest) returns (CreateCinemaResponse);
  rpc getCinemas(GetCinemasRequest) returns (GetCinemasResponse);
  rpc getCinema(GetCinemaRequest) returns (GetCinemaResponse);
  rpc searchCinemas(SearchCinemasRequest) returns (SearchCinemasResponse);
  rpc updateCinema(UpdateCinemaRequest) returns (UpdateCinemaResponse);
}

message UpdateCinemaRequest {
  int32 id = 1;
  string name = 2;
  string address = 3;
  Province province = 4;
}

message UpdateCinemaResponse {
  int32 status = 1;
  string message = 2;
}

message SearchCinemasRequest {
  map<string, string> criteria = 1;
  int32 page = 2;
  int32 size = 3;
  string sort = 4;
}

message SearchCinemasResponse {
  int32 status = 1;
  string message = 2;
  repeated Cinema cinemas = 3;
  int64 totalElement = 4;
  int64 totalPage = 5;
}

message GetCinemaRequest {
  int32 id = 1;
}
message GetCinemaResponse {
  int32 status = 1;
  string message = 2;
  Cinema cinema = 3;
}

message GetCinemasRequest {
  int32 page = 1;
  int32 size = 2;
  string sort = 3;
}

message Province {
  int32 id = 1;
  string name = 2;
}

message Cinema {
  int32 id = 1;
  string name = 2;
  string address = 3;
  Province province = 4;
  repeated string photos = 5;
}

message GetCinemasResponse {
  int32 status = 1;
  string message = 2;
  repeated Cinema cinemas = 3;
  int64 totalElement = 4;
  int64 totalPage = 5;
}

message CreateCinemaRequest {
  string name = 1;
  string address = 2;
  int32 provinceId = 3;
  repeated string photos = 4;
}
message CreateCinemaResponse {
  int32 status = 1;
  string message = 2;
}